--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-datasheet": "^1.4.12",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-spreadsheet": "^0.7.8",
+    "scheduler": "^0.23.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
